<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItem_addALog"
        android:orderInCategory="10"
        android:icon="@drawable/ic_add"
        android:title="@string/add_new_log"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/menuItem_log_filter"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="20"
        android:title="@string/menuItem_filter"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/menuItem_log_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="30"
        android:title="@string/menuItem_search"
        app:showAsAction="withText|ifRoom" />
</menu>