<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Card view -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <!-- Constraint layout within card view -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/minorPadding">

            <!-- TextView for displaying the nickname -->
            <TextView
                android:id="@+id/card_mainActivity_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mainActivity_nickname"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- TextView for displaying the make and model -->
            <TextView
                android:id="@+id/card_mainActivity_vehicleMakeAndModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mainActivity_makeAndModel"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--
                TextView for displaying the color and year, along with
                the sub model of the vehicle.
                For example: Black 2008 F150, Black 2008 F250, etc...
            -->
            <TextView
                android:id="@+id/card_mainActivity_vehicleColorAndYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mainActivity_colorAndYear"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_mainActivity_vehicleMakeAndModel" />

            <!-- TextView for displaying the plate number of the vehicle -->
            <TextView
                android:id="@+id/card_mainActivity_vehiclePlateNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_mainActivity_plateNumber"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_mainActivity_vehicleColorAndYear" />

            <!-- ImageView for the issue icon -->
            <ImageView
                android:id="@+id/card_mainActivity_issueIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/minorPadding"
                android:contentDescription="@string/card_mainActivity_issueIconDescription"
                android:src="@drawable/ic_issue_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_mainActivity_vehiclePlateNumber" />

            <!-- TextView for displaying the issue count -->
            <TextView
                android:id="@+id/card_mainActivity_issueDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minorPadding"
                android:layout_marginTop="3dp"
                android:text="@string/card_mainActivity_issueDescription"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/card_mainActivity_issueIcon"
                app:layout_constraintTop_toTopOf="@+id/card_mainActivity_issueIcon" />

            <!-- Button to select the vehicle -->
            <Button
                android:id="@+id/card_mainActivity_vehicleSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/minorPadding"
                android:text="@string/card_mainActivity_viewDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_mainActivity_issueDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>