<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorLogLight"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/minorPadding">


            <!--
            Title of the log
            -->
            <TextView
                android:id="@+id/card_logActivity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_log_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorLogDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--
            Description of the log
            -->
            <TextView
                android:id="@+id/card_logActivity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/minorPadding"
                android:text="@string/card_log_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorLogDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_logActivity_title" />

            <!--
            Date of the log
            -->
            <TextView
                android:id="@+id/card_logActivity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_log_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorLogDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--
            Cost of the log
            -->
            <TextView
                android:id="@+id/card_logActivity_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/adultPadding"
                android:text="@string/card_log_cost"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorLogDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_logActivity_description" />

            <!--
            Time of the log
            -->
            <TextView
                android:id="@+id/card_logActivity_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_log_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorLogDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_logActivity_cost" />

            <!--
            Log created at what vehicle mileage
            -->
            <TextView
                android:id="@+id/card_logActivity_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_log_mileage"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorLogDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_logActivity_time" />

            <!--
            Button to edit something within this log
            -->
            <Button
                android:id="@+id/card_logActivity_buttonEdit"
                style="@style/Style.Custom.Button.MaintenanceLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_log_buttonEdit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>