<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    ImageView for the colored icon
    -->
    <ImageView
        android:id="@+id/listItem_optionActivity_Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/adultPadding"
        android:layout_marginTop="@dimen/adultPadding"
        android:contentDescription="@string/listItem_optionActivity_iconDescription"
        android:src="@drawable/listitem_options_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    TextView for displaying the option item's title
    -->
    <TextView
        android:id="@+id/listItem_optionActivity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/minorPadding"
        android:layout_marginTop="@dimen/adultPadding"
        android:text="@string/listItem_optionActivity_Title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/listItem_optionActivity_Icon"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    TextView for displaying the option item's subtitle
    -->
    <TextView
        android:id="@+id/listItem_optionActivity_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listItem_optionActivity_Subtitle"
        app:layout_constraintStart_toStartOf="@id/listItem_optionActivity_title"
        app:layout_constraintTop_toBottomOf="@id/listItem_optionActivity_title" />

</androidx.constraintlayout.widget.ConstraintLayout>