<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorIssueLight"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/minorPadding">


            <!-- Title -->
            <TextView
                android:id="@+id/card_issueActivity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_issue_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorIssueDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Description -->
            <TextView
                android:id="@+id/card_issueActivity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/minorPadding"
                android:text="@string/card_issue_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorIssueDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_issueActivity_title" />

            <!-- Date -->
            <!--
            <TextView
                android:id="@+id/card_issueActivity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_issue_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorIssueDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            -->

            <!-- Priority -->
            <TextView
                android:id="@+id/card_issueActivity_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/adultPadding"
                android:text="@string/card_issue_priority_low"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorIssueDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_issueActivity_description" />


            <!-- Button to edit the issue -->
            <Button
                android:id="@+id/card_issueActivity_buttonEdit"
                style="@style/Style.Custom.Button.IssueLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/minorPadding"
                android:text="@string/card_issue_buttonEdit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_issueActivity_buttonComplete" />

            <!-- Button to mark this as complete  -->
            <Button
                android:id="@+id/card_issueActivity_buttonComplete"
                style="@style/Style.Custom.Button.IssueLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_issue_buttonComplete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>