<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/minorPadding"
            android:background="?android:attr/selectableItemBackground">

            <!--
            ImageView for the colored icon
            -->
            <ImageView
                android:id="@+id/card_optionActivity_Icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/listItem_optionActivity_iconDescription"
                android:src="@drawable/listitem_options_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--
            TextView for displaying the option item's title
            -->
            <TextView
                android:id="@+id/card_optionActivity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minorPadding"
                android:text="@string/listItem_optionActivity_Title"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_optionActivity_Icon" />

            <!--
            TextView for displaying the option item's subtitle
            -->
            <TextView
                android:id="@+id/card_optionActivity_subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listItem_optionActivity_Subtitle"
                app:layout_constraintStart_toStartOf="@id/card_optionActivity_title"
                app:layout_constraintTop_toBottomOf="@id/card_optionActivity_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>